plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

base {
	archivesName = 'aqua-vision-is-op'
}

def modVersion = project.version.toString()
def archiveProjectName = project.name

loom {
	splitEnvironmentSourceSets()

	mods {
		"nether_wart_farm_helper" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	testImplementation platform('org.junit:junit-bom:6.0.3')
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources {
	inputs.property 'version', modVersion

	filesMatching('fabric.mod.json') {
		expand 'version': modVersion
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 25
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--enable-native-access=ALL-UNNAMED'
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from('LICENSE') {
		rename { "${it}_${archiveProjectName}" }
	}
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}
